# terracart

./: .gitignore  CLAUDE.md  FUNCTIONS.md  README.md  analyze_tiles.py  app.js  assets.js  balancing.html  compass-test.html  coords.js  crops.js  index.html  interact.js  items.js  loot.js  manifest.webmanifest  poi-preview.html  rarity.js  render.js  sandbox.js  save.js  shops.js  spec.txt  sw.js  testtools.js  textures.js  tile_analysis.txt  tiledebug.html  tilemap.js  util.js  worldgen.js
.claude/: launch.json
data/: objects_max_3586athalmer.geojson  objects_max_3586athalmer.html  objects_nocar_3586athalmer.geojson  objects_nocar_3586athalmer.html  objects_nocar_3586athalmer_combined.geojson  objects_nocar_vs_osm_3586athalmer.json  objects_only_3586athalmer.geojson  objects_polesbins_3586athalmer.geojson  objects_polesbins_3586athalmer.html  objects_polesbins_3586athalmer_combined.geojson  objects_vs_osm_3586athalmer.html  objects_vs_osm_3586athalmer.json  objects_vs_osm_3586athalmer_combined.geojson  osm_3586athalmer.geojson  satextract_osm.geojson  trees_detected_3586athalmer.geojson  trees_detected_3586athalmer.html  (+2 more)
satextract/: .gitignore  README.md  compare_objects_osm.py  compare_trees_osm.py  merge_deepforest_trees.py  pyproject.toml  requirements.txt
satextract/examples/: run_kelowna.sh
satextract/satextract/: __init__.py  cli.py  geo.py  objects.py  osm.py  tiles.py  trees.py  visualize.py
satextract/satextract/runs/: tile_49p86_n119p48.html  tile_49p86_n119p48_novel.html  tile_49p86_n119p48_objects.html  tile_49p86_n119p48_trees.html
src/: app.js  (+14 more)
(+10 files in other folders)
