[project]
name = "satextract"
version = "0.1.0"
description = "Satellite feature extraction for terracart worldgen"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0",
]

[project.optional-dependencies]
trees = ["deepforest>=1.4"]
objects = [
    "torch>=2.0",
    "torchvision>=0.15",
    "transformers>=4.40",
]
all = ["satextract[trees,objects]"]

[project.scripts]
satextract = "satextract.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["satextract*"]
